--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 .container {
   background-color: #d1d1d1;
-  width: 500px;
+  width: 530px;
   padding: 20px;
   border-radius: 15px;
   margin: 100px auto 0;
@@ -35,7 +35,7 @@ img {
   padding-left: 10px;
   font-size: 19px;
 }
-.button-add-task {
+.button {
   border: none;
   border-radius: 7px;
   height: 42px;
@@ -46,14 +46,15 @@ img {
   padding: 0 15px;
   cursor: pointer;
   font-weight: 550;
+  margin-right: 10px;
 }
 
 
-.button-add-task:hover {
+.button:hover {
   opacity: 0.8;
 }
 
-.button-add-task:active {
+.button:active {
   opacity: 0.6;
 }
 
@@ -64,7 +65,7 @@ img {
 }
 
 .task {
-  background-color: #f2f2f2;
+  background-color: hsl(0, 0%, 95% );
   box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   height: 50px;
@@ -73,4 +74,9 @@ img {
   padding: 0 15px;
   border-radius: 5px;
   margin-bottom: 20px;
+}
+
+.done{
+  background-color: #8fac55 !important;
+  text-decoration: line-through;
 }
