--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@
   outline: none;
 }
 body {
-  background: url(./img/background.png);
+  background: url(./img/1341970.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 .container {
   background-color: #d1d1d1;
@@ -39,7 +43,7 @@ img {
   border: none;
   border-radius: 7px;
   height: 42px;
-  background-color: #003329;
+  background-color: #4f2c28;
   color: white;
   font-size: 16px;
   float: right;
@@ -48,7 +52,6 @@ img {
   font-weight: 550;
   margin-right: 10px;
 }
-
 
 .button:hover {
   opacity: 0.8;
@@ -65,7 +68,7 @@ img {
 }
 
 .task {
-  background-color: hsl(0, 0%, 95% );
+  background-color: hsl(0, 0%, 95%);
   box-shadow: 1px 4px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   height: 50px;
@@ -76,7 +79,11 @@ img {
   margin-bottom: 20px;
 }
 
-.done{
-  background-color: #8fac55 !important;
+.done {
+  background-color: #e7ce94 !important;
   text-decoration: line-through;
+}
+
+.invalid::placeholder {
+  color: red;
 }
