--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   outline: none;
 }
 body {
-  background: url(./img/1341970.png);
+  background: url(https://images2.alphacoders.com/134/1341970.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
